--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Treinamento de Etiqueta</title>
+<title>Modelos de Etiquetas</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
