--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1>Treinamento de Etiqueta</h1>
+    <h1>Modelos de Etiquetas</h1>
 </header>
 <main>
     <section class="form-section">
